changed name of IndexToo to SearchIndex

--- a/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
@@ -63,7 +63,7 @@
         });
         const newform = document.createElement('form');
         newform.method = 'post';
-        newform.action = '/LogException/IndexToo';
+        newform.action = '/LogException/SearchIndex';
 
         for (const key in data) {
             if (data.hasOwnProperty(key)) {
