--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -49,7 +49,7 @@
         </div>
         @Html.HiddenFor(m => m.PageNumber)
     </form>
-    <div class="block">
+    <div class="block" style="width: 10% !important">
         <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
     </div>
    
